# FirstVulkanProject

./: CMakeLists.txt  README.md
shaders/: gradient.comp  shader.slang  slang.spv
src/: globals.hpp  main.cpp
src/core/: file_functions.cpp
src/vk_backend/: vk_descriptors.cpp  vk_descriptors.hpp  vk_engine.cpp  vk_engine.hpp  vk_images.cpp  vk_images.hpp  vk_initializers.cpp  vk_initializers.hpp  vk_pipelines.cpp  vk_pipelines.hpp  vk_types.hpp
src/vulkan_backend/: VKA_Frame.cpp  VKA_Images.cpp  VKA_Swapchain.cpp  VulkanApplication.cpp  VulkanApplication.hpp
